[FE-MBR-001] send Account Eveent.

--- a/member-service/pom.xml
+++ b/member-service/pom.xml
@@ -23,6 +23,11 @@
 		<groupId>cn.freeexchange</groupId>
 		<artifactId>member-api</artifactId>
 	</dependency>
+	
+	<dependency>
+		<groupId>cn.freeexchange</groupId>
+		<artifactId>account-api</artifactId>
+	</dependency>
   	
   	
   	<dependency>
